# spreadsheet-auditor

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
agents/: openai.yaml
assets/test_corpus/expected_findings/: seeded-defects.json
assets/test_corpus/seeded_defects/: seeded-defects.xlsx
benchmarks/: run_benchmark.py  seeded_defects.json  seeded_defects_matrix.md
examples/: README.md  demo_annotated.xlsx  demo_audit_report.html  demo_audit_report.md  demo_bad_budget.xlsx  demo_findings.json  make_demo.py
examples/github-actions/: README.md  audit-spreadsheets.yml  code-scanning.yml
examples/screenshots/: README.md
references/: benchmark_methodology.md  check_catalog.md  custom_checks.md  excel_feature_coverage.md  google_sheets.md  limitations.md
schemas/: config.schema.json  findings.schema.json
scripts/: annotate.py  audit.py  build_dist.py  config_loader.py  create_seeded_corpus.py  data_hygiene.py  dependency_graph.py  materiality.py  quick_validate.py  range_checks.py  recalc.py  reconcile.py  reference_resolver.py  suppressions.py
spreadsheet_auditor/: __init__.py  __main__.py  audit.py  cli.py  data_hygiene.py  dependency_graph.py  finding.py  formula_drift.py  formula_parser.py  preflight.py  range_checks.py  reconcile.py  reference_resolver.py  report.py  sarif.py  suppressions.py  workbook_inventory.py
spreadsheet_auditor/checks/: __init__.py  base.py  data_hygiene.py  finance.py  formula_integrity.py  ranges.py  reconciliation.py
spreadsheet_auditor/demo/: __init__.py  demo_bad_budget.xlsx
tests/: conftest.py  test_checks.py  test_checks_registry.py  test_cli_ergonomics.py  test_confidence_drift.py  test_config_schema.py  test_corpus.py  test_exit_codes.py  test_finance_checks.py  test_finding_schema.py  test_healthcheck.py  test_html_output.py  test_perf_guardrails.py  test_run_metadata.py  test_sarif.py  test_skill_metadata.py  test_suppressions.py
